--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,13 @@
       <artifactId>tea-util</artifactId>
       <version>0.2.23</version>
     </dependency>
+
     <dependency>
       <groupId>io.github.toolsetlink</groupId>
       <artifactId>darabonba-base-java</artifactId>
       <version>1.0.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.aliyun</groupId>
       <artifactId>tea</artifactId>
@@ -106,15 +108,7 @@
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.1.1</version>
-        <configuration>
-          <encoding>UTF-8</encoding>
-          <doclint>none</doclint>
-        </configuration>
-      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -148,6 +142,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>    </plugins>
+      </plugin>
+    </plugins>
   </build>
 </project>
